@@ -18,5 +18,12 @@ the pages was flawed since it took to much changing dictionaries.
 Now keeps order in list and checks respective data on the dict
 Added a function (future) to load the data from the database
 in order to work with receiving data by email.
-# 06//21/2016
+# 06/21/2016
 Made major improvements on the python cron to be generalized into its own entity.
+# 06/26/2016
+Began to remove obot to make the whole script work smother.
+GetNews now work directly off praw with no login needed. This should reduce the amount of time to get the
+script going.
+# 06/27/2016
+Removed pycron and made it its own repo to be worked on later.
+Pycron is not fully functional and can be used to run both this script and others.
